ttps/1_Recon/intercept/caido/k8s/caido-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: caido
  labels:
    name: caido
