ttps/1_Recon/intercept/caido/k8s/caido-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: caido-service
  namespace: caido
spec:
  selector:
    app: caido
  type: LoadBalancer
  ports:
    - name: webaccess
      protocol: TCP
      port: 7000
      targetPort: 8080
