ttps/1_Recon/intercept/caido/k8s/caido-netpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: caido-nacl
spec:
  podSelector:
    matchLabels:
      app: caido
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
        cidr: 192.168.0.0/16
        except:
          - 192.168.70.0/24
      - ports:
        - protocol: TCP
        - port: 80
      - ports:
        - protocol: TCP
        - port: 7000
      - ports:
        - protocol: TCP
        - port: 8080
